--- a/style.css
+++ b/style.css
@@ -11,3 +11,44 @@ body{
     padding: 0;
     font-family: sans-serif;
 }
+h1{
+    color: aliceblue;
+    text-align: center;
+}
+.keys{
+    display: flex;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
+.key{
+    border: .4rem solid black;
+    border-radius: .5rem;
+    margin: 1rem;
+    font-size: 1.5rem;
+    transition: all 0.7s ease;
+    width: 10rem;
+    text-align: center;
+    color:white;
+    background: rgba(0, 0, 0, 0.5);
+    text-shadow: 0,0, .5rem black;
+}
+
+kbd{
+    display: block;
+    font-size: 4rem;
+}
+
+.playing{
+    transform: scale(1.1);
+    border-color: #34dea3;
+    box-shadow: 0 0 1rem #34dea3;
+}
+
+.sound{
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    letter-spacing: .3rem;
+    color: #34dea3;
+}
